@@ -29,6 +29,7 @@ import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.TriFunction;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.datastreams.DataStreamFeatures;
 import org.elasticsearch.features.FeatureService;
 import org.elasticsearch.ingest.IngestMetadata;
 import org.elasticsearch.ingest.PipelineConfiguration;
@@ -60,7 +61,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -88,7 +88,7 @@ public class StackTemplateRegistryTests extends ESTestCase {
         threadPool = new TestThreadPool(this.getClass().getName());
         client = new VerifyingClient(threadPool);
         clusterService = ClusterServiceUtils.createClusterService(threadPool);
-        featureService = new FeatureService(List.of(new StackTemplatesFeatures()));
+        featureService = new FeatureService(List.of(new StackTemplatesFeatures(), new DataStreamFeatures()));
         registry = new StackTemplateRegistry(
             Settings.EMPTY,
             clusterService,
@@ -505,7 +505,7 @@ public class StackTemplateRegistryTests extends ESTestCase {
 
     public void testThatNothingIsInstalledWhenAllNodesAreNotUpdated() {
         DiscoveryNode updatedNode = DiscoveryNodeUtils.create("updatedNode");
-        DiscoveryNode outdatedNode = DiscoveryNodeUtils.create("outdatedNode", ESTestCase.buildNewFakeTransportAddress(), Version.V_8_8_0);
+        DiscoveryNode outdatedNode = DiscoveryNodeUtils.create("outdatedNode", ESTestCase.buildNewFakeTransportAddress(), Version.V_8_10_0);
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .localNodeId("updatedNode")
             .masterNodeId("updatedNode")
@@ -514,19 +514,11 @@ public class StackTemplateRegistryTests extends ESTestCase {
             .build();
 
         client.setVerifier((a, r, l) -> {
-            fail("if some cluster node doesn't have the kibana-reporting managed by dsl feature nothing should happen");
+            fail("if some cluster mode are not updated to at least v.8.11.0 nothing should happen");
             return null;
         });
 
-        ClusterState cs = createClusterState(Settings.EMPTY, Map.of(), Map.of(), nodes, true, false);
-        ClusterChangedEvent realEvent = new ClusterChangedEvent(
-            "created-from-test",
-            cs,
-            ClusterState.builder(new ClusterName("test")).build()
-        );
-        ClusterChangedEvent event = spy(realEvent);
-        when(event.localNodeMaster()).thenReturn(nodes.isLocalNodeElectedMaster());
-
+        ClusterChangedEvent event = createClusterChangedEvent(Collections.emptyMap(), nodes);
         registry.clusterChanged(event);
     }
 
@@ -641,17 +633,6 @@ public class StackTemplateRegistryTests extends ESTestCase {
         DiscoveryNodes nodes,
         boolean addRegistryPipelines
     ) {
-        return createClusterState(nodeSettings, existingComponentTemplates, existingPolicies, nodes, addRegistryPipelines, true);
-    }
-
-    private ClusterState createClusterState(
-        Settings nodeSettings,
-        Map<String, Integer> existingComponentTemplates,
-        Map<String, LifecyclePolicy> existingPolicies,
-        DiscoveryNodes nodes,
-        boolean addRegistryPipelines,
-        boolean allNodesHaveLatestFeature
-    ) {
         Map<String, ComponentTemplate> componentTemplates = new HashMap<>();
         for (Map.Entry<String, Integer> template : existingComponentTemplates.entrySet()) {
             ComponentTemplate mockTemplate = mock(ComponentTemplate.class);
@@ -677,16 +658,6 @@ public class StackTemplateRegistryTests extends ESTestCase {
         }
         IngestMetadata ingestMetadata = new IngestMetadata(ingestPipelines);
 
-        Map<String, Set<String>> nodeFeatures = new HashMap<>();
-        for (DiscoveryNode node : nodes) {
-            nodeFeatures.put(node.getId(), Set.of(StackTemplateRegistry.KIBANA_REPORTING_MANAGED_BY_LIFECYCLE.id()));
-        }
-
-        if (allNodesHaveLatestFeature == false) {
-            // remove the feature from one of the provided nodes
-            nodeFeatures.remove(nodes.getNodes().keySet().iterator().next());
-        }
-
         return ClusterState.builder(new ClusterName("test"))
             .metadata(
                 Metadata.builder()
@@ -698,7 +669,6 @@ public class StackTemplateRegistryTests extends ESTestCase {
             )
             .blocks(new ClusterBlocks.Builder().build())
             .nodes(nodes)
-            .nodeFeatures(nodeFeatures)
             .build();
     }
 
